@@ -338,10 +338,8 @@ public class TupleState extends ProtocolStateSimple {
                     // TODO check that it is actually a TupleItem?
                     Class<?> c = Class.forName(type);
                     try {
-                        tuple.add(c.newInstance());
-                    } catch (InstantiationException e) {
-                        throw new ProtocolException(e);
-                    } catch (IllegalAccessException e) {
+                        tuple.add(c.getDeclaredConstructor().newInstance());
+                    } catch (ReflectiveOperationException e) {
                         throw new ProtocolException(e);
                     }
                 }
@@ -380,19 +378,15 @@ public class TupleState extends ProtocolStateSimple {
                     // we check whether it is a TupleItem, and in case
                     // use the setValue mathod
                     try {
-                        Object o = c.newInstance();
+                        Object o = c.getDeclaredConstructor().newInstance();
                         if (!(o instanceof TupleItem)) {
                             throw new ProtocolException(e);
                         }
                         ((TupleItem) o).setValue(actual);
                         tuple.add(o);
-                    } catch (InstantiationException e1) {
+                    } catch (ReflectiveOperationException | KlavaException e1) {
                         throw new ProtocolException(e1);
-                    } catch (IllegalAccessException e1) {
-                        throw new ProtocolException(e1);
-                    } catch (KlavaException e1) {
-                        throw new ProtocolException(e1);
-                    }
+                    } 
                 } catch (Exception e) {
                     throw new ProtocolException(e);
                 }
